--- a/docs/Protocol.Rmd
+++ b/docs/Protocol.Rmd
@@ -1,10 +1,11 @@
 ---
 title: "Matrix model error detection protocol"
 author: "Bruce E. Kendall"
-date: "4/9/2018"
+date: "4/19/2018"
 output: pdf_document
 ---
 
+# Overview
 Examine each publication to determine the following:
 
 1. Is the model a pre-breeding census, a post-breeding census, or something else (e.g., an approximation of a birth-flow model, or birth-pulse at the middle of a timestep)?
@@ -14,7 +15,7 @@ Examine each publication to determine the following:
 5. For each of the stages identified in previous step, what is the mean development time?
 6. For each of the stages identified in step 4, how was the growth transition calculated?
 
-For each question, record both your response and, in the associated notes field, the evidence supporting your conclusion.
+For each question, record both your response and, in the associated "Obs" field, the evidence supporting your conclusion.
 
 Potential sources of information include the paper itself, supplementary information associated with the paper, and papers cited by the paper. If the model is not presented in any of those places, look at the model in the COMADRE database, as that was presumably obtained by personal communication with the author. If any of the answers remains indeterminate after consulting all of these sources, code it as "unknown."
 
@@ -26,8 +27,17 @@ In the formulas referenced here, $i$ refers to a stage or age class, $F_i$ is th
 
 If you find that you cannot make sense of the protocol or are not sure how it applies to a particular source, please contact Bruce Kendall immediately for further clarification.
 
+# Match between database and source
+## `MatrixModified`
+For each study that actually shows the matrix population model, check that the matrix in COMADRE or COMPADRE is the the same.  Options: "Yes" | "No"
+
+## `MatrixModifiedObs`
+If "Yes" in MatrixModified, above, record what has been changed (e.g. element f3,2 has been adjusted for pre-breeding census; element u1,2 has bee adjusted for uneven state duration).
+
 # Census type
 Look for two types of information: statements about the structure of the model (e.g., "we constructed a pre-breeding census model") and description of the youngest stage/age class (identified by the row or rows of nonzero values in the F matrix). The first sort of claim should be checked by consulting the stage description, to ensure that the authors actually constructed the model they intended.
+
+## `CensusType`
 
 There are five possible responses, with most studies falling into the first three categories:
 
@@ -51,6 +61,7 @@ One common source of ambiguity is that the stages are described with a range of 
 # Survival in reproduction
 Each transition in the F matrix should contain both a a fertility (number of newborns produced by an individual of that age) and a survival (of the parent and/or the offspring, depending on the type of census). The evidence for determining which survival (if any) is included in the F matrix can come from a symbolic representation of the model and/or by comparing listed values of survival and fertility (often presented in a life table) with the quantitative values of the F matrix (read from the appropriate rows of the model presented in the source, or from the F matrix in the COMADRE database).
 
+## `SurvInRep`
 Possible values include:
 
 1. **none**: each value in the F matrix equals the corresponding fertility in the life table. Symbolically, $F_{1,i} = \phi_i$.
@@ -61,9 +72,10 @@ Possible values include:
 5. **partial parent | partial offspring**: For models in which reproduction is in the middle of a timestep. Fertility is multiplied by partial-timestep survival of the parent and partial-timestep survival of the offspring. For reproduduction occuring at fraction $\tau$ through a timestep, this might be represented, e.g., $F_{1,i} = P_i^{\tau} \phi_i P_0^{1-\tau}$
 
 # Reproductive maturity
-This has three component questions:
+This has three components:
 
-## What is the mean age at first reproduction?
+## `MeanAgeFirstRep`
+What is the mean age at first reproduction?
 This should be answered from the perspective of the described life history, not the model implementation. Possible sources of information include:
 
 - textual description of the life history
@@ -71,31 +83,39 @@ This should be answered from the perspective of the described life history, not 
 
 The entry should be a number, in units of timesteps; if reproductive maturity is described solely in terms of stage, leave it blank
 
-## What is the first reproductive stage?
+## `StageFirstRep`
+What is the first reproductive stage?
 Record the youngest stage with a non-zero fertility, ideally determined from the life table or the text description of the population. Record it as the name of the stage that is used in COMADRE.
 
-## Does the model include reproduction by maturing individuals?
+## `ReproWithMaturation`
+Does the model include reproduction by maturing individuals?
 Is there a non-zero value in the F matrix associated with the stage (or stages) that can mature into a reproductive stage by the next timestep?
 
 # "Long" development stages
-Identify the stages in the model that (a) represent a qualitative development stage in the life cycle (i.e., are not defined simply by a size range) and (b) last for longer than one timestep. The latter can be determined by looking for non-zero values on the diagonal of the U matrix.
+In this section, you will focus on the stages in the model (if any) that (a) represent a qualitative development stage in the life cycle (i.e., are not defined simply by a size range) and (b) last for longer than one timestep. 
 
-Record these using the stage names in COMPADRE. If there is more than one such stage in the model, separate them with a vertical bar (e.g., "Juvenile | Subadult"). If there are no such stages in the model, write "none"
+## `LongStages`
+Long developmetal stages can be identified by 
 
-# Mean stage durations
+a. finding the stages that are described as developmental stages in the life history description;
+b. For each, examining the associated column of the U matrix to determine wether there is a non-zero value on the diagonal of the matrix.
+
+Record any stages that satisfy both criteria using the stage names in COMPADRE or COMPADRE. If there is more than one such stage in the model, separate them with a vertical bar (e.g., "Juvenile | Subadult"). If there are no such stages in the model, write "none", and leave the next three fields blank.
+
+## `MeanStageDuration`
 For each of the long developmental stages, record the mean development time of the stage. This should be inferred from the description of the life history, rather than from looking at the model itself. The information may appear in the text, or in a life table.
 
-Record them as numeric values, in units of timesteps. If there is more than one long developmental stage in the model, separate the values with a vertical bar (e.g., "3 | 2"). If there are no such stages in the model, write "na"
+Record them as numeric values, in units of timesteps. If there is more than one long developmental stage in the model, separate the values with a vertical bar (e.g., "3 | 2"). 
 
-# Stage duration variances
+## `VarStageDuration`
 For each of the long developmental stages, record the variance in development time of the stage. This should be inferred from the description of the life history, rather than from looking at the model itself. The information may appear in the text, or in a life table.
 
-Record them as numeric values, in units of timesteps. If there is more than one long developmental stage in the model, separate the values with a vertical bar (e.g., "3 | 2"). If there are no such stages in the model, write "na".
+Record them as numeric values, in units of timesteps. If there is more than one long developmental stage in the model, separate the values with a vertical bar (e.g., "3 | 2"). 
 
 If a variance is not mentioned, but it is clear from the life history description that all individuals have the same development time, enter 0 (zero) for the variance. Otherwise enter "unknown"
 
-# Growth transitions
-For the long developmental stages, record the rule or equation used to calculate the maturation transition rate ($G_i = \gamma_i \sigma_i$). In what follows, Tbar and $\bar{T}_i$ refer to the mean development time of the stage. If there are no such stages in the model, write "na"; otherwise choose from the following:
+## `GrowthTransition`
+For the long developmental stages, record the rule or equation used to calculate the maturation transition rate ($G_i = \gamma_i \sigma_i$). In what follows, Tbar and $\bar{T}_i$ refer to the mean development time of the stage. Choose from the following:
 
 1. **1/Tbar**: $\gamma_i = 1/\bar{T}_i$. This is equation 6.99 or the "geometric distribution" in Caswell (2001). The rule might be stated; if not, you can quickly test it by calculating whether $G_i = \sigma_i/\bar{T}_i$ (where $\sigma_i$ can be obtained from the life table or by summing column i of the U matrix).
 2. **cohort**: $\gamma_i = \frac{\sigma_i^{\bar{T}_i}}{\sum_{\tau=1}^{\bar{T}_i} \sigma_i^{\tau}} = \frac{\sigma_i^{\bar{T}_i - 1} (1-\sigma_i)}{1 - \sigma_i^{\bar{T}_i}}$. The rule might be stated, or you may infer it from the logic given in the paper, especially if the demographic rates come from following a single cohort through development. It also is the formula given by Crouse et al. (1987), which might be cited.
@@ -105,4 +125,4 @@ For the long developmental stages, record the rule or equation used to calculate
 5. **variable**: Based on one of the formulas in Caswell (2001), section 6.4.3 ("Variable stage durations"). Makes use of the variance in development time.
 6. **negative binomial**: Based on the formulas in Caswell (2001), section 6.4.5 ("Negative binomial stage durations"). Makes use of the variance in development time.
 
-If the rule is different from any of the above, write "other" and describe the details in the notes. If you cannot determine the rule from the information in the paper, write "unknown"
+If the rule is different from any of the above, write "other" and describe the details in the Obs field. If you cannot determine the rule from the information in the paper, write "unknown"
