--- a/docs/Protocol edits RSG.Rmd
+++ b/docs/Protocol edits RSG.Rmd
@@ -36,7 +36,7 @@ Notation: in the formulas referenced below, $i$ refers to a stage or age class, 
 # MatrixModified: For each study that actually shows the matrix population model, check that the matrix in COMADRE or COMPADRE is the the same.  Options: "Yes" | "No"
 
 # MatrixModifiedObs: If "Yes" in MatrixModified, above, record what has been changed (e.g. element f3,2 has been adjusted for pre-breeding census; element u1,2 has bee adjusted for uneven state duration).
-ALSO TO BE ADDED AS A DIFFERENT COLUMN IN THE EXCEL FILE
+ALSO TO BE ADDED AS A DIFFERENT COLUMN IN THE EXCEL FILE **[BEK] Rob already did this**
 
 # CensusType: look for two types of information: statements about the structure of the model (e.g., "we constructed a pre-breeding census model") and description of the youngest stage/age class (identified by the row or rows of nonzero values in the F matrix in variable MatrixClassAuthor). The first sort of claim should be checked by consulting the stage description, to ensure that the authors actually constructed the model they intended. There are five possible responses, with most studies falling into the first three categories:
 
@@ -49,18 +49,19 @@ ALSO TO BE ADDED AS A DIFFERENT COLUMN IN THE EXCEL FILE
     a. the model is called a "post-breeding census" in the publication.
     a. the age of the class is explicitly stated in the publicatoin and/or the stages of the model.
     b. The age of the class is unambigously implied by the name of the class (e.g., "seed", "egg" or "neonate").
-    b. The stage into which the youngest stage matures **next** is unambiguously one timestep old (e.g., "yearling" for a model with an annual timestep). DO YOU AGREE W THIS?
+    b. The stage into which the youngest stage matures **next** is unambiguously one timestep old (e.g., "yearling" for a model with an annual timestep). DO YOU AGREE W THIS? **Yes**
     c. The description of the reproduction term explicitly describes a full timestep of survival by the parent.
 3. **Post+**: The yougest class in the matrix is a small fraction of a timestep old (e.g., "fledglings"), and the next class is unambiguously a full timestep old.
 4. **Mid**: The youngest class in the matrix is approximately half a timestep old, and subsequent stages likewise have non-integer ages (1.5, etc.). This is unusual enough that it will probably be explicitly described in the model description; other evidence includes explicit treatment of half-timestep survival in the reproduction terms.
 5. **Flow**: The model is representing a continuously breeding life history ("birth-flow"). Again, this is unusual, and methods taken to discretize the continuous breeding should be prominent in the model description.
 
-IT WOUDL BE GOOD TO PROVIDE PUBLISHED STUDIES IN COMADRE AND IN COMPADRE FOR EACH OF THESE CATEGORIES.
-
+IT WOUDL BE GOOD TO PROVIDE PUBLISHED STUDIES IN COMADRE AND IN COMPADRE FOR EACH OF THESE CATEGORIES. **Agreed**
 
 # AmbiguousAgeRange: One common source of ambiguity is that the stages are described with a range of ages (e.g., "age 0-1"). In most cases this is *not* meant to represent a stage with a range of ages, but rather represents a lack of understanding that the stage is supposed to represent a snapshot. In these cases, do your best using other information in the paper to determine whether the intended census age is the beginning or end of the range. Feel free to contact us for clarification if in doubt (read note above). Options are "Yes", "No", or "NA" if the model is not age-based. Inspect MatrixCriteriaAge and MatrixAuthorClass to obtain this information.
 
 # AmbiguousAgeRangeObs: Provide examples of the specific stage/stages that are ambiguous. E.g. "1", "1 | 2", for the first, or for the first and second stage, respectively. 
+
+**[BEK] Your suggested variable here misses the point I was trying to make. I have instead added "Ambiguous" to the options in the previous item.**
 
 # SurvInRep: each transition in the F matrix should contain both a fertility (number of newborns produced by an individual of that age) and a survival (of the parent and/or the offspring, depending on the type of census). The evidence for determining which survival (if any) is included in the F matrix can come from a symbolic representation of the model (See equation X in CITATION FOR COMADRE, See equation Y in CITATION FOR COMPADRE), and/or by comparing listed values of survival and fertility (often presented in a life table) with the quantitative values of the F matrix (read from the appropriate rows of the model presented in the source, or from the F matrix in the databases). Possible values include:
 
